deploy-clientapi/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-api-dashboard
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: client-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-api-internal
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: client-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-api-external
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: client-api
